# fixed-sqrt-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clean.sh  errors.sh  plot.sh  shell.nix
examples/: errors.rs
src/: lib.rs  traits.rs
