[package]
name = "fixed-sqrt"
version = "0.1.0"
authors = ["Shane Pearman <spearman@gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "0.5.*"
integer-sqrt = "0.1.*"
typenum = "1.*"

[dev-dependencies]
clap = "2.*"
