[package]
name = "fixed-sqrt"
version = "0.2.3"
authors = ["Shane Pearman <spearman@gitlab.com>"]
license = "Apache-2.0"
description = "Square root for fixed-point numbers"
repository = "https://gitlab.com/spearman/fixed-sqrt-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1.*"
integer-sqrt = "0.1.*"
typenum = "1.*"

[dev-dependencies]
clap = "2.*"
